fix loi scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 
 
 body {
+  overflow: hidden;
   padding: 0px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
