--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -15,7 +15,7 @@
         }
 
         .admin-main {
-            
+            height: calc(100vh - 40px);
         }
     }
 }
